--- a/images/custom/Dockerfile
+++ b/images/custom/Dockerfile
@@ -1,8 +1,11 @@
 ARG IMAGE
 FROM $IMAGE
 
-COPY config /app
+USER root
+
+COPY ./jars/ $SPARK_HOME/jars
+COPY app /app
 
 WORKDIR /app
 
-
+USER ${spark_uid}
