--- a/images/custom/Dockerfile
+++ b/images/custom/Dockerfile
@@ -1,9 +1,12 @@
 ARG IMAGE
 FROM $IMAGE
 
-USER root
+USER root:root
+
+RUN mkdir -p /app
 
 COPY ./jars/ $SPARK_HOME/jars
+
 COPY app /app
 
 WORKDIR /app
